Add Geminin API and LLM Platform setting
- Create LlmConversation and LlmResponse interfaces
- Refactor default LlmConversation to LlmConversationOpenAI and default LlmResponse to LlmResponseOpenAI
- Add LlmConversationGemini and LlmResponseGemini following Gemini API format
- Create LlmFactory to switch between conversation and reponses json formats
- Add LLM Platform setting